styles/Home.module.css
.container {
  padding: 0 2rem;
}

.main {
  min-height: 100vh;
  padding: 4rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.swag{
  background-color: white;
  padding: 0 0rem;
  margin:0 0rem;
  max-width: 100%;
  max-height: 100%;
  height:100vh;

}


.footer {
  display: flex;
  flex: 1;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.bruh {
  background-color: black;
  padding: 0 0rem;
  margin:0 0rem;
  max-width: 100wh;
  max-height: 100vh;
width:100wh;
height:100vh;
}

.bruh2 {
	 
  position: absolute;
  top: 5vh;
  left:10vh;

  padding:10px;
	text-align: left;
	z-index: 100;
	display:block;
  font-size: 4vw;
  font-family: 'helvetica-neue', sans-serif;
  border-radius: 25px;
  background-color: black;
  color: white;
min-width: 20rem;
animation-name: slideinToLeft;
animation-duration: 5s;
}





.bruh3 {
  position: absolute;
  right:10vh;
  bottom:10vh;
padding:10px;
	text-align: left;
	z-index: 100;
	display:block;
  font-size: 4vw;
  font-family: 'helvetica-neue', sans-serif;
  border-radius: 25px;
  background-color: white;
  color: black;
  min-width: 25rem;
  animation-name: slideinToRight;
  animation-duration: 5s;

}

@keyframes slideinToLeft {
  from {
    left: 100vh
  }

  to {
    left:10vh;
  }
}

@keyframes slideinToRight {
  from {
    right: 100vh
  }

  to {
    right:10vh;
  }
}




@media screen and (max-width:425px) {  


/*implementation for smartphones*/




.bruh2 {

  margin-top: 5vh; 
  font-size: 2rem;
  margin-left:0;
margin-right:0;
left:1rem;
width:10rem;

min-width:0rem;
  color: white;

}


.bruh3 {
  font-size: 2rem;
  margin-top: 25vh;
margin-right:0;
margin-left:0;
margin-bottom:1rem;
float:right;
display:right;
justify-content:right;
  min-width:0rem;
  width:11rem;
  text-align:center;
  right: 1rem;
}

}


.title,
.description {
  text-align: center;
}

.description {
  margin: 4rem 0;
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.card {
  margin: 1rem;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
  max-width: 300px;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h2 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

@media (max-width: 150px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
}

